--- a/publications.html
+++ b/publications.html
@@ -39,27 +39,25 @@ Valencian International University (Spain) <p>
 
 </P><UL>
 
-<LI> <b> [30] </b> <NOM> Complex Network Analysis for Regional Economic Integration of Ethiopia in
-
-the 21st Century </NOM>  <br />
-<PAPER> Tekilu Tadesse Choramo, Jemal Abafita, <u> Y. Gandica</u> and  L. E C Rocha <br />   
+<LI> <b> [30] </b> <NOM> Bounded confidence on a growing scale-free network </NOM> <br />
+<PAPER> David Hernández, Yérali <u>Gandica</u> and Guillaume Deffuant <br />
 (Work in progress) </PAPER> <p>
 
-<LI> <b> [29] </b> <NOM> Bounded confidence models on growing SF networks </NOM> <br />
-<PAPER> Yérali <u>Gandica</u> and Guillaume Deffuant <br />
-(Work in progress) </PAPER> <p>
-
-<LI> <b> [28] </b> <NOM> The distance-aware Axelrod Model </NOM>  <br />
-<PAPER> Yérali <u>Gandica</u>, Petter Holme and Silvia Chiacchiera <br />  
-(Work in progress) </PAPER> <p>
-
-<LI> <b> [27] </b> <NOM> An entropic analysis of social manifestations </NOM>  <br />
-<PAPER> Daniel Rico and Yérali <u>Gandica</u> <br />  
+<LI> <b> [29] </b> <NOM> Understanding sociocultural differences through Wikipedia editing </NOM>  <br /> <PAPER> David André Villamil and Yérali <u>Gandica</u> <br />  
 (Submitted) </PAPER> <p>
 
-<LI> <b> [26] </b> <NOM>Bounded confidence models generate more secondary clusters when the number of agents is growing </NOM> <br />
-<PAPER> Yérali <u>Gandica</u> and Guillaume Deffuant <br />
-(Submitted: https://arxiv.org/pdf/2305.18858.pdf) </PAPER> <p>
+<LI> <b> [28] </b> <NOM> Economic Integration of
+Africa in the 21st Century: Complex Network and Panel Regression Analysis </NOM>  <br />
+<PAPER> Tekilu Tadesse Choramo, Jemal Abafita, <u> Y. Gandica</u> and  L. E C Rocha <br />   
+(Submitted: https://arxiv.org/abs/2410.21019) </PAPER> <p>
+
+<LI> <b> [27] </b> <NOM> Bounded confidence model on growing populations </NOM>  <br />
+<PAPER> Yérali <u>Gandica</u> and Guillaume Deffuant <br />  
+Advances in Complex Systems, <b>2450009.</b> Doi.org/10.1142/S0219525924500097 <b> (2024) </b> </PAPER> <p>
+
+<LI> <b> [26] </b> <NOM> An entropic analysis of social demonstrations </NOM> <br />
+<PAPER> Daniel Rico and Yérali <u>Gandica</u> <br /> 
+Entropy<b>, 26(5)</b>, 363 (2024). Doi.org/10.3390/e26050363 <b> (2024) </b> </PAPER> <p>
   
 <LI> <b> [25] </b> <NOM> Signs of criticality in social explosions </NOM> <br />
 <PAPER> Mariano G. Beiró, Ning Ning Chung, Lock Yue Chew and Yérali <u>Gandica</u> 
