--- a/publications.html
+++ b/publications.html
@@ -22,7 +22,9 @@
 <font size="-1"> Yérali Gandica <font size="-1"> 
 ygandica@gmail.com   <p>
 Associate Professor <p>
-Valencian International University (Spain) <p>
+Valencian International University <br />
+& <br />
+UNIE University (Spain)  <p>
 
 
  <font color="009900">ORCID ID:</font> 
