--- a/mentoring.html
+++ b/mentoring.html
@@ -5,7 +5,7 @@
 
 </HEAD>
 
-<BODY> 
+<BODY style="background-color:black;">
   <!-- <SECTION style="background: #ff66ff"> -->
     <SECTION>
  <H1 ALIGN=CENTER> <span style="display:inline-block; width: 5cm;"></span> Mentoring <span style="display:inline-block; width: 4cm;"></span> <A HREF="index.html"> <FONT SIZE=+1>homepage </FONT>  &emsp; </A>  <A HREF="publications.html"> <FONT SIZE=+1> Publications </FONT>  </A>  &emsp; <A HREF="teaching.html"> <FONT SIZE=+1>Teaching </FONT>  </A> &emsp; <A HREF="tutorials.html"> <FONT SIZE=+1> Tutorials </FONT>  </A> &emsp; <A HREF="conferencias.html"> <FONT SIZE=+1> Organisation conferences </FONT>  </A> </H1>
@@ -28,42 +28,31 @@ UNIE University (Spain)  <p>
 <font color="0099FF"> twitter.com/ygandica</font>   <p>
 
 </p></h2></div>
-  <div class="col col-2">
+  <div class="col col-3">
 
-<CENTER><H2>  <font size="6">     <font color="black">  <u>  Regional and global economic integration of Ethiopia in the 21st century </u>  </font> </font> </H2>  </CENTER>
-
-<CENTER><H2>  <font size="3">     <font color="black">  Ph.D. students: Tekilu Tadesse. Dep. Economics and Dep. Physics and Astronomy. Gent University. 2021-2024  (Co-tutoring with Prof. Luis E. C. Rocha) </font> </font> </H2>  </CENTER>
-
-<CENTER><H2> <input type="image" src="figura.png" width="800/" /> </a> </H2>  </CENTER>
-
-
-<CENTER><H2>  <font size="6">     <font color="black">  Social manifestations: Some entropic measures, structure in communities and
-networks   </font> </font> </H2>  </CENTER>
-
-<CENTER><H2>  <font size="3">     <font color="black">  Daniel Rico. Master in Big Data. Valencian International University (VIU).   </font> </font> </H2>  </CENTER>
-
-<CENTER><H2>  <font size="3">     <font color="black">  May - Sep 2023 (Paper submitted to the 2nd Meeting of the Spanish chapter of the Complex Systems Society).   </font> </font> </H2>  </CENTER>
-
-<CENTER><H2> <input type="image" src="daniel.png" width="900/" /> </a> </H2>  </CENTER>
-
-<CENTER><H2>  <font size="6">     <font color="black">  Wikipedia Editing Preferences: A dynamic study   </font> </font> </H2>  </CENTER>
-
-<CENTER><H2>  <font size="3">     <font color="black">  Julien Assuied. 3rd-year. International Bachelor in Data Science. CY-Tech Paris-Université.  </font> </font> </H2>  </CENTER>
-
-<CENTER><H2>  <font size="3">     <font color="black">  Apr - Aug 2021 (Paper: Frontiers in Big Data. section: Data Science 6, 1077318).   </font> </font> </H2>  </CENTER>
-
-<CENTER><H2> <input type="image" src="julien2.png" width="500/" /> </a> </H2>  </CENTER>
-
-<CENTER><H2>  <font size="6">     <font color="black">  <u>  Effect of the limit of attention on the Axelrod Model </u>  </font> </font> </H2>  </CENTER>
-
-<CENTER><H2>  <font size="3">     <font color="black">  Rémi Perrier. Master-2. Physics Department. CY Paris-Université (Co-tutoring with Prof. Laura Hernández).  </font> </font> </H2>  </CENTER>
-
-<CENTER><H2>  <font size="3">     <font color="black">  Mar - Jun 2020 (Paper: PLoS ONE 16(11): e0259295. DOI: 10.1371/journal.pone.0259295).   </font> </font> </H2>  </CENTER>
-
-<CENTER><H2> <input type="image" src="remi.png" width="370/" /> </a> </H2>  </CENTER>
-
-
-
-</div>
+<div> <font size="3">     <font color="white">    Ph.D. student:  Tekilu Tadesse.  <font color="red"> Thesis: </font> “Regional and global economic integration of Ethiopia in the 21st century".  Dep. Economics and Dep. Physics and Astronomy. Gent University. 2021-2025  (Co-tutoring with Prof. Luis E. C. Rocha).   </font> </font> <font color="yellow">  <b> 1st paper submited: https://arxiv.org/abs/2410.21019. </font> </b> </div>
+<br> 
+<div> <font size="3">     <font color="white"> Magda Del Pilar Santa Fajardo. <font color="red"> Thesis: </font> “Manifestaciones sociales en torno al dı́a internacional de la mujer 2018". Master in Artificial intelligence. Valencian International University. Spain. May - Sep 2024.   </font> </font> </div>
+<br> 
+<div> <font size="3">     <font color="white">  Francisco Ruas Faro Viana. <font color="red"> Thesis: </font> “Manifestaciones sociales: un análisis estructural". Master in Artificial intelligence. Valencian International University. Spain. Jun - Sep 2024. </div>
+<br> 
+<div> <font size="3">     <font color="white">  David Hernández. <font color="red"> Thesis: </font> “Modelos de formación de opinión en redes scale-free". Master in Big Data. Valencian International University. Spain. Apr - Oct 2024. <font color="yellow">  <b> Article in writing process </font> </b> </div>
+<br> 
+<div> <font size="3">     <font color="white">  Manuel Suárez.   <font color="red"> Thesis: </font>  “Autosimilitud en movimientos sociales". Master in Artificial intelligence. Valencian International University. Spain. Apr - Oct 2024. <font color="yellow">  <b> Article in writing process </font> </b> </div>
+<br> 
+<div> <font size="3">     <font color="white">  David Baena.  <font color="red"> Thesis: </font>  “Efecto de la dinámica durante la formación de la red en un modelo de propagación de culturas. Master in Big Data. Valencian International University. Spain. Apr - Sep 2024. </div>
+<br> 
+<div> <font size="3">     <font color="white">  David André Villamil.  <font color="red"> Thesis: </font>  “Análisis dinámico de preferencias a través de Wikipedia. Master in Artificial intelligence. Valencian International University. Spain. Apr - Aug 2024. <font color="yellow">  <b> Article submitted </font> </b> </div>
+<br> 
+<div> <font size="3">     <font color="white">  Manuel Arriaza.  <font color="red"> Thesis: </font>  “Semantic-Temporal Analysis of Social Manifestations”. Master in Artificial intelligence. Valencian International University. Spain. May - Nov 2023. </div>
+<br> 
+<div> <font size="3">     <font color="white">  Daniel Rico.  <font color="red"> Thesis: </font>  “Social manifestations: Some entropic measures, structure in communities and networks”. Master in Big Data. Valencian International University. Spain. May - Sep 2023. <font color="yellow">  <b> Publication:</b> </font> Daniel Rico and Yérali Gandica, “An entropic analysis of social demonstrations”. Entropy 2024, 26(5), 363 (2024). <font color="blue"> doi.org/10.3390/e26050363. </font> </div>
+<br> 
+<div> <font size="3">     <font color="white">  Fien Goetmaeckers.  <font color="red"> Thesis: </font>  “Continuous Opinion Dynamics on Bilayer Temporal Networks”. Dept. Economics & Dept. Physics and Astronomy. Ghent University. Belgium (co-supervised with Luis E. C. Rocha). Sep 2020 - May 2021. <font color="yellow">  <b> Publication:</b> </font> F. Zarei, Y. Gandica, and L. E C Rocha, “Bursts of communication increase opinion diversity in the temporal Deffuant model”. Sci Rep 14, 2222 (2024). <font color="blue"> doi.org/10.1038/s41598-024-52458-w. </font> </div>
+<br> 
+<div> <font size="3">     <font color="white">  Rémi Perrier.  <font color="red"> Thesis: </font>  “Effect of the limit of attention on the Axelrod Model”. LPTM. Phys. Dep. CY Cergy Paris Université. France. (co-supervised with Laura Hernández) Mar - Jun 2020. <font color="yellow">  <b> Publication:</b> </font> Rémi Perrier, Yérali Gandica and Laura Hernández, “The consequences of hesitation: Axelrod model with intrinsic noise”. PLoS ONE 16(11): e0259295 (2021). <font color="blue"> DOI: 10.1371/jour-
+nal.pone.0259295. </font> </div>
+<br> 
+<div> <font size="3">     <font color="white">  3rd-year Scientific stage of BSc student: Julien Assuied.  <font color="red"> Thesis: </font>  “Wikipedia Editing Preferences: A dynamic study”. Bachelor in Data-Science. CY Cergy Paris Université. France. Apr - Aug 2021. <font color="yellow">  <b> Publication:</b> </font> Julien Assuied and Yérali Gandica, “Detection and effect of social events on Wikipedia data-set for studying human preferences”. Frontiers in Big Data. Sec. Data Science 6, 1077318 (2023).  <font color="blue"> DOI: 10.3389/fdata.2023.1077318. </font> </div>
 
 </BODY></HTML>
