--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Yérali Gandica is currently an Associate Professor at the UNIE University in Ma
 In addition to her PhD, Yérali complemented her academic background with a Licenciatura in Sociology. In summary, Yérali has extensive experience working on critical phenomena, computational 
 social science, Big Data, and network science across various interdisciplinary groups, including mathematics, finance, geography, engineering, and medicine. Her previous position was as an 
 Assistant Professor at the International Bachelor in Data Science, affiliated with the Laboratoire de Physique Théorique et Modélisation (LPTM) at CY Cergy Paris Université, Paris, France. At the 
-same university, she obtained her habilitation to supervise PhD theses (HDR) in 2021. To date, she has mentored four master's theses (two in co-supervision) and is currently co-supervising a PhD 
+same university, she obtained her habilitation to supervise PhD theses (HDR) in 2021. To date, she has mentored mentored a dozen master's theses and is currently co-supervising a PhD 
 student.
 
 </p></hh1></div>
