--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,7 @@ ygandica@gmail.com   <p>
 Associate Professor <p>
 Valencian International University <br />
 & <br />
-UNIE University (Spain)  <p>
+Nebrija University (Spain)  <p>
 
 
  <font color="009900">ORCID ID:</font> 
