--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ same university, she obtained her habilitation to supervise PhD theses (HDR) in 
 student.
 
 </p></hh1></div>
-     <marquee behavior="scroll" direction="left"> <b> SAVE THE DATE: Third workshop Criticality on networks and socio-economic systems at CCS2024 (EXETER) </b> </marquee>
+     <marquee behavior="scroll" direction="left"> <b> Guest Editor in special issue of journal Mathematics (Q1) https://www.mdpi.com/si/mathematics/Soc_Phenom_Math_Model_Data_Anal) </b> </marquee>
 </div>
 
 <!-- Esto es un comentario al código que no se verá en pantalla -->
