--- a/publications.html
+++ b/publications.html
@@ -41,9 +41,13 @@ Nebrija University (Spain)  <p>
 
 </P><UL>
 
+  <LI> <b> [31] </b> <NOM> Self-similarity in social movements </NOM> <br />
+<PAPER> Manuel Suárez, Mariángeles Serrano and Yérali <u>Gandica</u> <br />
+Work in progress </PAPER> <p>
+
 <LI> <b> [30] </b> <NOM> Bounded confidence on a growing scale-free network </NOM> <br />
 <PAPER> David Hernández, Yérali <u>Gandica</u> and Guillaume Deffuant <br />
-(Work in progress) </PAPER> <p>
+Submitted: https://arxiv.org/pdf/2506.02669. </PAPER> <p>
 
 <LI> <b> [29] </b> <NOM> Understanding sociocultural differences through Wikipedia editing </NOM>  <br /> <PAPER> David André Villamil and Yérali <u>Gandica</u> <br />  
 (Submitted) </PAPER> <p>
