--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ a position as an assistant professor in the Laboratoire de Physique Théorique e
 student.
 
 </p></hh1></div>
-     <marquee behavior="scroll" direction="left"> <b> Have a look at “Bounded confidence dynamics generates opinion cascades on a growing scale-free network”. https://arxiv.org/pdf/2506.02669. </b> </marquee>
+     <marquee behavior="scroll" direction="left"> <b> Have a look at “Bounded confidence dynamics generates opinion cascades on growing scale-free networks”. https://arxiv.org/pdf/2506.02669. </b> </marquee>
 </div>
 
 <!-- Esto es un comentario al código que no se verá en pantalla -->
