--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ Operations Research and Econometrics (CORE) and the Institute of Information and
 Louvain, focusing on Geo-localized Data.
 
 Yérali has extensive experience working on critical phenomena, computational social science, Big Data, and network science across various interdisciplinary groups, including mathematics, 
-finance, geography, engineering, and medicine. In addition to her PhD, Yérali complemented her academic background with a Licenciatura in Sociology. Her previous position was as an 
-Associate Professor at the Valencian International University and Nebrija university, both in Spain. She obtained her habilitation to supervise PhD theses (HDR) in 2021, while holding 
+finance, geography, engineering, and medicine. In addition to her PhD, Yérali complemented her academic background with a Licenciatura in Sociology.His previous positions include a 
+position as associate professor at the International University of Valencia and assistant professorship at the University of Nebrija, both in Spain. She obtained her habilitation to supervise PhD theses (HDR) in 2021, while holding 
 a position as an assistant professor in the Laboratoire de Physique Théorique et Modélisation (LPTM) at CY Cergy Paris Université, Paris, France. To date, she has mentored a dozen master's theses and is currently co-supervising a PhD 
 student.
 
