--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@ the Center for Research in Finance and Management (CeReFiM) at the Business Depa
 During this postdoctoral fellowship, Yérali began applying the concepts of Network Science to financial data. Finally, she worked as an Associate Scientific Researcher at the Center for 
 Operations Research and Econometrics (CORE) and the Institute of Information and Communication Technologies, Electronics, and Applied Mathematics (ICTEAM) at Université catholique de 
 Louvain, focusing on Geo-localized Data.
-
+</p>
+<p>
 Yérali has extensive experience working on critical phenomena, computational social science, Big Data, and network science across various interdisciplinary groups, including mathematics, 
-finance, geography, engineering, and medicine. In addition to her PhD, Yérali complemented her academic background with a Licenciatura in Sociology.His previous positions include a 
+finance, geography, engineering, and medicine. In addition to her PhD, Yérali complemented her academic background with a Licenciatura in Sociology. Her previous positions include a 
 position as associate professor at the International University of Valencia and assistant professorship at the University of Nebrija, both in Spain. She obtained her habilitation to supervise PhD theses (HDR) in 2021, while holding 
 a position as an assistant professor in the Laboratoire de Physique Théorique et Modélisation (LPTM) at CY Cergy Paris Université, Paris, France. To date, she has mentored a dozen master's theses and is currently co-supervising a PhD 
 student.
