--- a/publications.html
+++ b/publications.html
@@ -21,10 +21,8 @@
 <h2 align="CENTER"> <img src="yerali.png" width="100/">  <p>
 <font size="-1"> Yérali Gandica <font size="-1"> 
 ygandica@gmail.com   <p>
-Associate Professor <p>
-Valencian International University <br />
-& <br />
-Nebrija University (Spain)  <p>
+Assistant Professor <p>
+Autonomous University of Madrid <p>
 
 
  <font color="009900">ORCID ID:</font> 
