--- a/mentoring.html
+++ b/mentoring.html
@@ -16,10 +16,8 @@
 <h2 align="CENTER"> <img src="yerali.png" width="100/">  <p>
 <font size="-1"> Yérali Gandica <font size="-1"> 
 ygandica@gmail.com   <p>
-Associate Professor <p>
-Valencian International University <br />
-& <br />
-Nebrija University (Spain)  <p>
+Assistant Professor <p>
+Autonomous University of Madrid <p>
 
  <font color="009900">ORCID ID:</font> 
 <a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
@@ -36,7 +34,7 @@ Nebrija University (Spain)  <p>
 <br> 
 <div> <font size="3">     <font color="white">  Francisco Ruas Faro Viana. <font color="red"> Thesis: </font> “Manifestaciones sociales: un análisis estructural". Master in Artificial intelligence. Valencian International University. Spain. Jun - Sep 2024. </div>
 <br> 
-<div> <font size="3">     <font color="white">  David Hernández. <font color="red"> Thesis: </font> “Modelos de formación de opinión en redes scale-free". Master in Big Data. Valencian International University. Spain. Apr - Oct 2024. <font color="yellow">  <b> Article in writing process </font> </b> </div>
+<div> <font size="3">     <font color="white">  David Hernández. <font color="red"> Thesis: </font> “Modelos de formación de opinión en redes scale-free". Master in Big Data. Valencian International University. Spain. Apr - Oct 2024. <font color="yellow">  <b> Article submitted </font> </b> </div>
 <br> 
 <div> <font size="3">     <font color="white">  Manuel Suárez.   <font color="red"> Thesis: </font>  “Autosimilitud en movimientos sociales". Master in Artificial intelligence. Valencian International University. Spain. Apr - Oct 2024. <font color="yellow">  <b> Article in writing process </font> </b> </div>
 <br> 
