--- a/teaching.html
+++ b/teaching.html
@@ -16,10 +16,8 @@
 <h2 align="CENTER"> <img src="yerali.png" width="100/">  <p>
 <font size="-1"> Yérali Gandica <font size="-1"> 
 ygandica@gmail.com   <p>
-Associate Professor <p>
-Valencian International University <br />
-& <br />
-Nebrija University (Spain)  <p>
+Assistant Professor <p>
+Autonomous University of Madrid <p>
 
  <font color="009900">ORCID ID:</font> 
 <a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
