--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Systems (naXys) within the Mathematics Department of the University of Namur, wh
 the Center for Research in Finance and Management (CeReFiM) at the Business Department of the Faculty of Economics, Social Sciences, and Business Administration at the Université de Namur. 
 During this postdoctoral fellowship, Yérali began applying the concepts of Network Science to financial data. Finally, she worked as an Associate Scientific Researcher at the Center for 
 Operations Research and Econometrics (CORE) and the Institute of Information and Communication Technologies, Electronics, and Applied Mathematics (ICTEAM) at Université catholique de 
-Louvain, focusing on Geo-localized Data.
+Louvain, focusing on Geo-localised Data.
 </p>
 <p>
 Yérali has extensive experience working on critical phenomena, computational social science, Big Data, and network science across various interdisciplinary groups, including mathematics, 
