--- a/mentoring.html
+++ b/mentoring.html
@@ -30,6 +30,12 @@ Autonomous University of Madrid <p>
 
 <div> <font size="3">     <font color="white">    Ph.D. student:  Tekilu Tadesse.  <font color="red"> Thesis: </font> “Regional and global economic integration of Ethiopia in the 21st century".  Dep. Economics and Dep. Physics and Astronomy. Gent University. 2021-2025  (Co-tutoring with Prof. Luis E. C. Rocha).   </font> </font> <font color="yellow">  <b> 1st paper submited: https://arxiv.org/abs/2410.21019. </font> </b> </div>
 <br> 
+<div> <font size="3">     <font color="white"> Claudia Enrique. <font color="red"> Thesis: </font> “Analysis of retweet networks during several demonstrations". Master in Artificial 
+intelligence. Valencian International University. Spain. Jan - May 2025   <font color="yellow">  <b> Article in writing process </font> </b> </div>
+<br>     
+<div> <font size="3">     <font color="white"> Sergi Puigmal Miranda. <font color="red"> Thesis: </font> “Blurring of personal information (tattoos and faces) in images and
+videos (Deep learning)". Master in Artificial intelligence. Valencian International University. Spain. Sep 2024 - March 2025.   </font> </font> </div>
+<br> 
 <div> <font size="3">     <font color="white"> Magda Del Pilar Santa Fajardo. <font color="red"> Thesis: </font> “Manifestaciones sociales en torno al dı́a internacional de la mujer 2018". Master in Artificial intelligence. Valencian International University. Spain. May - Sep 2024.   </font> </font> </div>
 <br> 
 <div> <font size="3">     <font color="white">  Francisco Ruas Faro Viana. <font color="red"> Thesis: </font> “Manifestaciones sociales: un análisis estructural". Master in Artificial intelligence. Valencian International University. Spain. Jun - Sep 2024. </div>
