--- a/mentoring.html
+++ b/mentoring.html
@@ -30,9 +30,15 @@ Autonomous University of Madrid <p>
 
 <div> <font size="3">     <font color="white">    Ph.D. student:  Tekilu Tadesse.  <font color="red"> Thesis: </font> “Regional and global economic integration of Ethiopia in the 21st century".  Dep. Economics and Dep. Physics and Astronomy. Gent University. 2021-2025  (Co-tutoring with Prof. Luis E. C. Rocha).   </font> </font> <font color="yellow">  <b> 1st paper submited: https://arxiv.org/abs/2410.21019. </font> </b> </div>
 <br> 
+<div> <font size="3">     <font color="white"> Rodrigo Castillo. <font color="red"> Thesis: </font> “Índice de novedad en publicaciones cientı́ficas en el campo de la fı́sica. Master
+in Artificial intelligence". Master in Artificial intelligence. Valencian International University. Spain. Apr - Nov 2025.   <font color="yellow">  <b> Article in writing process </font> </b> </div>
+<br>
+<div> <font size="3">     <font color="white"> Jaime Noda. <font color="red"> Thesis: </font> “Análisis estructural en redes de manifestaciones sociales". Master in Artificial 
+intelligence. Valencian International University. Spain. May - Nov 2025.   <font color="yellow">  <b> Article in writing process </font> </b> </div>
+<br>
 <div> <font size="3">     <font color="white"> Claudia Enrique. <font color="red"> Thesis: </font> “Analysis of retweet networks during several demonstrations". Master in Artificial 
 intelligence. Valencian International University. Spain. Jan - May 2025.   <font color="yellow">  <b> Article in writing process </font> </b> </div>
-<br>     
+<br> 
 <div> <font size="3">     <font color="white"> Sergi Puigmal Miranda. <font color="red"> Thesis: </font> “Blurring of personal information (tattoos and faces) in images and
 videos (Deep learning)". Master in Artificial intelligence. Valencian International University. Spain. Sep 2024 - March 2025.   </font> </font> </div>
 <br> 
